# high-res-stereo

./: .gitignore  calculate_disparity.py  calculate_disparity_script_model.py  create_model_script.py  create_traced_model_script.py  eval_disp.py  eval_mb.py  model_data_parallel_to_not_data_parallel.py  pyproject.toml  requirements.txt  submission.py  visualize_model.py
src/high_res_stereo/: calculate_disparity.py
src/high_res_stereo/models/: hsm.py
src/high_res_stereo/utils/: inference.py  model.py
test/: test_package.py
utils/: inference.py  model.py
